--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "build-bundle": "vue-cli-service build --target lib --name vueson ./src/components/vueson/index.js",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "lodash": "^4.17.11",
+    "lodash.clone": "^4.5.0",
+    "lodash.foreach": "^4.5.0",
     "vue": "^2.5.17"
   },
   "devDependencies": {
