--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "4.1.3",
+    "bulma": "0.7.2",
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.5",
     "@vue/cli-plugin-unit-mocha": "^3.1.1",
